fix all raw usage of Entity code style detection issues.